--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "baseUrl": "./", // Assure que les chemins relatifs sont bien interprétés
+    "paths": {
+      "@screens/*": ["src/screens/*"], // Ajoute des alias pour simplifier les imports
+      "@components/*": ["src/components/*"] // Si tu as des composants, fais pareil
+    },
+    "jsx": "react", // Assure que React est bien utilisé pour le JSX
+    "esModuleInterop": true, // Pour éviter certains problèmes d'importation de modules CommonJS
+    "allowSyntheticDefaultImports": true, // Permet d'importer des modules CommonJS sans avoir à utiliser .default
+    "skipLibCheck": true // Accélère la compilation en évitant la vérification des types des fichiers .d.ts
+  },
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
